Adugare din UI a listei de puncte de evitat

--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -196,6 +196,7 @@
     <Content Include="Scripts\Funcs.jsx" />
     <Content Include="Scripts\ReactComps.jsx" />
     <Content Include="Stylesheets\Stiluri.css" />
+    <Content Include="SVG\plus.svg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
