Se pozitioneaza o poza pe centru si se pot adugat/sterge desene pe ea

--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -224,6 +224,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Pics\" />
     <Folder Include="Views\Neo4j\" />
     <Folder Include="Views\SQLServer\" />
   </ItemGroup>
