--- a/WebApplication1/packages.config
+++ b/WebApplication1/packages.config
@@ -5,16 +5,24 @@
   <package id="JavaScriptEngineSwitcher.V8" version="3.24.1" targetFramework="net472" />
   <package id="JavaScriptEngineSwitcher.V8.Native.win-x64" version="3.24.1" targetFramework="net472" />
   <package id="JSPool" version="4.0.0" targetFramework="net472" />
+  <package id="log4net" version="2.0.17" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.TimeProvider" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.ClearScript.Core" version="7.4.4" targetFramework="net472" />
   <package id="Microsoft.ClearScript.V8" version="7.4.4" targetFramework="net472" />
   <package id="Microsoft.ClearScript.V8.ICUData" version="7.4.4" targetFramework="net472" />
   <package id="Microsoft.ClearScript.V8.Native.win-x64" version="7.4.4" targetFramework="net472" />
   <package id="Microsoft.ClearScript.V8.Native.win-x86" version="7.4.4" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
   <package id="Neo4j.Driver" version="5.18.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
@@ -22,18 +30,26 @@
   <package id="React.Web" version="5.2.12" targetFramework="net472" />
   <package id="React.Web.Mvc4" version="5.2.12" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Hashing" version="8.0.0" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="7.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.0" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="8.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="Utf8StringInterpolation" version="1.3.1" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
+  <package id="ZLogger" version="2.4.1" targetFramework="net472" />
 </packages>
